src/test/deca/context/invalid/ContextAvecObjet/DeclFields/voidType.deca
// Description:
//    Déclaration d'un champs de type void
//
// Resultats:
//    Erreur contextuelle
//    Un champ de peut pas être de type void

class A {
    protected void x;
}